Separate z-indexes for overlays with tether and overlays with viewport; No longer use CSS variables in layer.sass

--- a/spec_app/app/assets/stylesheets/integration_test.sass
+++ b/spec_app/app/assets/stylesheets/integration_test.sass
@@ -32,7 +32,7 @@ a
 .fixed-top-bar,
 .fixed-bottom-bar
   position: fixed
-  z-index: 99
+  z-index: 1500
   top: 0
   left: 0
   right: 0
